--- a/IdentityDemo.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityDemo.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
         <a asp-controller="Account" asp-action="Members">Members</a>
         <a asp-controller="Account" asp-action="Register">Register</a>
         <a asp-controller="Account" asp-action="LogIn">Login</a>
+        <a asp-controller="Account" asp-action="LogOut">Logout</a>
     </nav>
     <br />
     <div>
