Enhance car details handling and validation
- Assert nullability for `car` in `CarController.cs` to ensure safe access to properties.
- Update `AllDetails.cshtml` to improve formatting by adding a line break after the `Year`.
- Add validation attributes to `CreateVM.cs` for `Make`, `Model`, and `Year` to enforce input constraints.

--- a/IdentityDemo.Web/Views/Car/AllDetails.cshtml
+++ b/IdentityDemo.Web/Views/Car/AllDetails.cshtml
@@ -10,8 +10,8 @@
     {
         <li>@car.Make </li>
         <li>@car.Model</li>
-        <li>@car.Year</li>
-        <br/>
+            <li>@car.Year<br /></li>
+        
     }
     </ul>
 </div>
