--- a/IdentityDemo.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityDemo.Web/Views/Shared/_Layout.cshtml
@@ -2,31 +2,45 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="https://unpkg.com/@@picocss/pico@@latest/css/pico.classless.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/@@picocss/pico@@latest/css/pico.classless.min.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body style="padding: 1rem;">
-    <nav>
-        @if (User.IsInRole("Administrator"))
-        {
-            <a asp-controller="Account" asp-action="Admin">Admins</a>
-        } 
-        <a asp-controller="Account" asp-action="Members">Members</a>
-        @if (User.Identity!.IsAuthenticated)
-        {
-            <a asp-controller="Account" asp-action="LogOut">Logout</a>
-            <a asp-controller="Car" asp-action="AllDetails">Show cars</a>
-        }
-        else
-        {
-            <a asp-controller="Account" asp-action="Register">Register</a>
-            <a asp-controller="Account" asp-action="LogIn">Login</a>
-        }
+    <div class="container-fluid p-5 bg-primary text-white text-center">
+        <h1 class="text-capitalize">About cars.</h1>
+        <p>Members cars!</p>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-nav">
+                @if(User.IsInRole("Administrator")) {
+                    <a asp-controller="Account" asp-action="Admin" class="nav-link">Admins</a>
+                }
+                <a asp-controller="Account" asp-action="Members" class="nav-link">Members</a>
+                @if(User.Identity!.IsAuthenticated) {
+                    <a asp-controller="Account" asp-action="LogOut" class="nav-link">Logout</a>
+                    <a asp-controller="Car" asp-action="AllDetails" class="nav-link">Show cars</a>
+                }
+                else {
+                    <a asp-controller="Account" asp-action="Register" class="nav-link">Register</a>
+                    <a asp-controller="Account" asp-action="LogIn" class="nav-link">Login</a>
+                }
+            </div>
+        </div>
     </nav>
     <br />
     <div>
         @RenderBody()
     </div>
+    <footer class="container-fluid bg-primary mt-5 p-5 text-center text-white" role="contentinfo">
+        <span class="text-capitalize">Vroom vroom.</span>
+        <br />
+        <span>Copyright &copy; 2025 Clive, David, Peter & Zhelyazko, Sweden</span>
+
+    </footer>
+
     @RenderSection("Scripts", false)
 </body>
 </html>
