--- a/IdentityDemo.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityDemo.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html>
+<html style ="height:100%;">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/@@picocss/pico@@latest/css/pico.classless.min.css">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
-<body style="padding: 1rem;">
+<body class="d-flex flex-column min-vh-100">
     <div class="container-fluid p-5 bg-primary text-white text-center">
         <h1 class="text-capitalize">About cars.</h1>
         <p>Members cars!</p>
@@ -34,7 +34,7 @@
     <div>
         @RenderBody()
     </div>
-    <footer class="container-fluid bg-primary mt-5 p-5 text-center text-white" role="contentinfo">
+    <footer class="container-fluid bg-primary mt-5 p-5 text-center text-white footer mt-auto py-3" role="contentinfo">
         <span class="text-capitalize">Vroom vroom.</span>
         <br />
         <span>Copyright &copy; 2025 Clive, David, Peter & Zhelyazko, Sweden</span>
