--- a/IdentityDemo.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityDemo.Web/Views/Shared/_Layout.cshtml
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/@@picocss/pico@@latest/css/pico.classless.min.css">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <style>
+        .register-bg {
+            background: url('/imagez/honda-nsx.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+    </style>
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100 @(ViewData["BodyClass"])">
     <div class="container-fluid p-5 bg-primary text-white text-center">
         <h1 class="text-capitalize">About cars.</h1>
         <p>Members cars!</p>
