Admin only delete

--- a/IdentityDemo.Web/Views/Car/AllDetails.cshtml
+++ b/IdentityDemo.Web/Views/Car/AllDetails.cshtml
@@ -34,6 +34,8 @@
                                     @car.Year
                                 </a>
                             </td>
+                        @if (User.IsInRole("Administrator"))
+                        {
                             <td style="width: 1%;">
                                 <form asp-controller="Car" asp-action="Delete" asp-route-id="@car.Id" method="post" style="display:inline; float: right;">
                                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
@@ -45,6 +47,7 @@
                                     </div>
                                 }
                             </td>
+                        }
                         </tr>
                     }
                 </tbody>
