--- a/IdentityDemo.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityDemo.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,15 @@
             background: url('/imagez/honda-nsx.jpg') no-repeat center center fixed;
             background-size: cover;
         }
+        .login-bg {
+            background: url('/imagez/nissan-skyline.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        .members-bg {
+            background: url('/imagez/bmw-m3.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
     </style>
 </head>
 <body class="d-flex flex-column min-vh-100 @(ViewData["BodyClass"])">
