--- a/IdentityDemo.Web/Views/Account/Members.cshtml
+++ b/IdentityDemo.Web/Views/Account/Members.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model MembersVM
+@{
     ViewBag.Title = "Members";
 }
 
@@ -9,8 +10,9 @@
     @if (User.Identity!.IsAuthenticated)
     {
         <p>
-            Welcome <strong>@User.Identity.Name</strong>!
+            Welcome <strong>@User.Identity.Name</strong>!<br />
         </p>
+        <p>@Model.FirstName @Model.LastName</p>
     }
     else
     {
