--- a/IdentityDemo.Web/Views/Account/Login.cshtml
+++ b/IdentityDemo.Web/Views/Account/Login.cshtml
@@ -8,22 +8,27 @@
 <div class="container">
     <h3>Log In</h3>
     <div class="form-signin mb-3 mt-3">
-        <form asp-controller="Account" asp-action="Login">
-            <div class="mb-3 mt-3">
-                <label class="form-label" asp-for="Username"></label>
-                <input class="form-control" asp-for="Username" />
-                <span asp-validation-for="Username" class="text-danger validation-message-space"></span>
+        <form asp-controller="Account" asp-action="Login"
+              class="mx-auto"
+              style="max-width: 500px; background-color: rgba(255, 255, 255, 0.8); padding: 1.5rem; border-radius: 0.5rem;">
+
+            <div class="mb-3">
+                <label asp-for="Username" class="form-label"></label>
+                <input asp-for="Username" class="form-control" />
+                <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-            <div class="mb-3 mt-3">
-                <label class="form-label" asp-for="Password"></label>
-                <input class="form-control" asp-for="Password" />
-                <span asp-validation-for="Password" class="text-danger validation-message-space"></span>
+
+            <div class="mb-3">
+                <label asp-for="Password" class="form-label"></label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <br />
-            <div class="mb-3 mt-3">
-                <input class="btn btn-primary" type="submit" value="Log In" />
-            </div>
+
+            <input class="btn btn-primary" type="submit" value="Log In" />
+
+            <div asp-validation-summary="All" class="text-danger mt-3"></div>
         </form>
+
         <div asp-validation-summary="All" class="text-danger validation-message-space"></div>
     </div>
 </div>
