--- a/IdentityDemo.Web/Views/Account/Members.cshtml
+++ b/IdentityDemo.Web/Views/Account/Members.cshtml
@@ -5,16 +5,16 @@
 
 
 <div class="container mt-4">
-    <h3 class="text-primary">Members</h3>
+    <h3 class="text-outline">Members</h3>
 
     @if (User.Identity!.IsAuthenticated)
     {
-        <p>
+        <p class="text-outline">
             Welcome <strong>@User.Identity.Name</strong>!
         </p>
     }
     else
     {
-        <p>Du är inte inloggad...</p>
+        <p class="text-outline">Du är inte inloggad...</p>
     }
 </div>
