--- a/IdentityDemo.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityDemo.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,11 @@
             background: url('/imagez/bmw-m3.jpg') no-repeat center center fixed;
             background-size: cover;
         }
+
+        .text-outline {
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+        }
     </style>
 </head>
 <body class="d-flex flex-column min-vh-100 @(ViewData["BodyClass"])">
