minor members styling

--- a/IdentityDemo.Web/Views/Account/Members.cshtml
+++ b/IdentityDemo.Web/Views/Account/Members.cshtml
@@ -14,7 +14,7 @@
             Welcome <strong>@User.Identity.Name</strong>!
             <br/>
         </p>
-        <p>@Model.FirstName @Model.LastName</p>
+        <p class="text-outline">@Model.FirstName @Model.LastName</p>
     }
     else
     {
