--- a/IdentityDemo.Web/Views/Account/Register.cshtml
+++ b/IdentityDemo.Web/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Register";
-    ViewData["BodyClass"] = "register-bg"; // 👈 Adds car background to this page only
+    ViewData["BodyClass"] = "register-bg";
 }
 
 <h3>Register</h3>
