--- a/IdentityDemo.Web/Views/Account/Admin.cshtml
+++ b/IdentityDemo.Web/Views/Account/Admin.cshtml
@@ -4,17 +4,17 @@
 }
 
 <div class="container mt-4">
-    <h3 class="text-primary">Admin</h3>
+    <h3 class="text-outline">Admin</h3>
 
     @if (User.Identity!.IsAuthenticated)
     {
-        <p>
+        <p class="text-outline>
             Welcome <strong>@User.Identity.Name</strong>!<br/>
         </p>
         <p>@Model.FirstName @Model.LastName</p>
     }
     else
     {
-        <p>Du är inte inloggad...</p>
+        <p class="text-outline>Du är inte inloggad...</p>
     }
 </div>
