Updated the ServerError razor.

--- a/IdentityDemo.Web/Views/Error/ServerError.cshtml
+++ b/IdentityDemo.Web/Views/Error/ServerError.cshtml
@@ -1,14 +1,2 @@
-﻿﻿
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Server Error</title>
-    <link rel="stylesheet" href="https://unpkg.com/@@picocss/pico@@latest/css/pico.classless.min.css">
-</head>
-<body>
-    <div style="margin:50px;">
-        <h2>Server Error</h2>
-        <img src="~/Images/OMG.gif" />
-    </div>
-</body>
-</html>
+﻿<h1>Server Error</h1>
+<p>Sorry, an error occurred while processing your request.</p>
